--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 accelerate==1.7.0
+aiobotocore==2.23.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiohttp-retry==2.9.1
+aioitertools==0.12.0
 aiosignal==1.3.2
 alembic==1.16.1
 amqp==5.3.1
@@ -15,7 +17,10 @@ asyncssh==2.21.0
 atpublic==6.0.1
 attrs==25.3.0
 billiard==4.2.1
+bitsandbytes==0.46.0
 blinker==1.9.0
+boto3==1.38.27
+botocore==1.38.27
 cachetools==5.5.2
 celery==5.5.3
 certifi==2025.6.15
@@ -43,6 +48,7 @@ dvc-data==3.16.10
 dvc-http==2.32.0
 dvc-objects==5.1.1
 dvc-render==1.0.2
+dvc-s3==3.2.1
 dvc-studio-client==0.21.0
 dvc-task==0.40.2
 entrypoints==0.4
@@ -80,6 +86,7 @@ iniconfig==2.1.0
 iterative-telemetry==0.0.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 joblib==1.5.1
 kiwisolver==1.4.8
 kombu==5.5.4
@@ -137,6 +144,8 @@ rsa==4.9.1
 ruamel.yaml==0.18.14
 ruamel.yaml.clib==0.2.12
 ruff==0.11.13
+s3fs==2025.5.1
+s3transfer==0.13.0
 safehttpx==0.1.6
 safetensors==0.5.3
 scikit-learn==1.7.0
@@ -162,7 +171,9 @@ threadpoolctl==3.6.0
 tokenizers==0.21.1
 tomli==2.2.1
 tomlkit==0.13.3
-torch==2.7.1
+torch==2.7.1+cu118
+torchaudio==2.7.1+cu118
+torchvision==0.22.1+cu118
 tqdm==4.67.1
 transformers==4.52.4
 typer==0.16.0
@@ -177,6 +188,7 @@ waitress==3.0.2
 wcwidth==0.2.13
 websockets==15.0.1
 Werkzeug==3.1.3
+wrapt==1.17.2
 yarl==1.20.1
 zc.lockfile==3.0.post1
 zipp==3.23.0
